src/objects/ModuleDependency__c.object
<CustomObject>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Module</label>
        <referenceTo>Module__c</referenceTo>
        <relationshipLabel>Predecessor Modules</relationshipLabel>
        <relationshipName>PredecessorModules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Predecessor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Predecessor</label>
        <referenceTo>Module__c</referenceTo>
        <relationshipLabel>Dependent Modules</relationshipLabel>
        <relationshipName>DependentModules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Module Dependency</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MD-{00000000}</displayFormat>
        <label>Module Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Modules Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DifferentModuleAndPredecessor</fullName>
        <active>true</active>
        <description>When a module dependency is created/updated, the Module and its Predecessor must be different.</description>
        <errorConditionFormula>Module__c   =  Predecessor__c</errorConditionFormula>
        <errorMessage>A module cannot be its own predecessor.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ModulesSameCourse</fullName>
        <active>true</active>
        <description>When a Module dependency is created/updated, both courses must belong to the same course.</description>
        <errorConditionFormula>Predecessor__r.Course__c   &lt;&gt;   Module__r.Course__c</errorConditionFormula>
        <errorMessage>Both programs must belong to the same course.</errorMessage>
    </validationRules>
</CustomObject>